kube/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: telehealth-api
  name: telehealth-api-db-deployment
  labels:
    app: telehealth-api-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: telehealth-api-db  # Corrected to match the template labels
  template:
    metadata:
      labels:
        app: telehealth-api-db
    spec:
      containers:
      - name: telehealth-api-db
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresstorage
          mountPath: /var/lib/postgresql/data
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
        readinessProbe:
          exec:
            command:
            - pg_isready
            - "-U"
            - postgres
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
      volumes:
      - name: postgresstorage
        persistentVolumeClaim: 
          claimName: telehealth-api-db-pvc
      - name: init-script
        configMap:
          name: telehealth-api-postgres-init

---
apiVersion: v1
kind: Service
metadata:
  namespace: telehealth-api
  name: telehealth-api-db-service
spec:
  type: ClusterIP
  selector:
    app: telehealth-api-db
  ports:
    - port: 5432
      targetPort: 5432
