kube/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-api-service
  namespace: mustafa
spec:
  selector:
    app: demo-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
