kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telehealth-api-ingress
  namespace: telehealth-api
spec:
  rules:
  - host: api.telehealth.duckdns.org  # idk if need to change this to something else not sure
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: telehealth-api-service
            port:
              number: 8080
